# t3-sancheck

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/workflows/: commitlint.yaml
docs/: README.md  architecture.md  cli-reference.md  limitations.md  quickstart.md
docs/interpretations/: anomalies.md  cleanliness.md  distributions.md  normality.md  structures.md
src/sancheck/: __init__.py  _check_func.py  _cli.py  _core.py  _helper.py  _info.py  _plotting.py  _reports.py
tests/fixtures/: clean.csv  multicollinear.csv  noisy.csv
