[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sancheck"
version = "0.2.2"
description = "Minimal-tuning CLI tool for data stats and clarity checks"
readme = "README.md"
requires-python = ">=3.9"

authors = [
    { name = "Nexo-kun" }
]

license = { text = "MIT" }

dependencies = [
    "statsmodels",
    "scikit-learn",
    "numpy",
    "scipy",
    "matplotlib",
    "seaborn",
    "rich"
]

[project.scripts]
sancheck = "sancheck.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest"
]

[tool.setuptools.packages.find]
where = ["src"]